# outreach

./: prediction-markets-uk.md
clawbot/: .env.example  .gitignore  CORPORATE_CHARTER.md  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
clawbot/agents/ceo/: SOUL.md
clawbot/agents/cfo/: SOUL.md
clawbot/agents/cmo/: SOUL.md
clawbot/agents/coo/: SOUL.md
clawbot/agents/cto/: SOUL.md
clawbot/agents/fulfilment_templates/: ir35_quickcheck_v1.md
clawbot/agents/meta/: SOUL.md
clawbot/agents/shareholder-activist/: .hermes.md  SOUL.md
clawbot/agents/shareholder-conservative/: .hermes.md  SOUL.md
clawbot/agents/shareholder-diversifier/: .hermes.md  SOUL.md
clawbot/agents/shareholder-longterm/: .hermes.md  SOUL.md
clawbot/scripts/: deploy.ps1  escalations.py  ops  smoke_gumroad.py  smoke_nim.py
clawbot/src/clawbot/: bus.py  (+60 more)
clawbot/tests/: test_accounts_ctx.py  test_accounts_store.py  test_agent_factory.py  test_agent_lifecycle.py  test_agent_registry.py  test_auto_diversification.py  test_board.py  test_board_hypothesis_pivot.py  test_builtin_accounts.py  test_builtin_browser_primitives.py  test_builtin_experiment.py  test_builtin_intel.py  test_builtin_media_extras.py  test_builtin_payments_issuing.py  test_builtin_seo.py  test_builtin_skills.py  test_bus.py  test_business_attribution_integration.py  test_business_cycle_runner.py  test_business_funnel.py  test_business_lander.py  test_business_prompt_renderer.py  test_business_store.py  test_business_strategies.py  test_canary_mode.py  test_capital_graduation.py  test_capital_integration.py  test_capital_ledger.py  test_causal_store.py  test_chat.py  test_coder.py  test_company_brain.py  test_company_fitness.py  test_compliance_pack.py  test_dashboard_server.py  test_db_outreach_schema.py  test_dev_pack.py  test_directive_router.py  test_directive_router_skills.py  test_drift_audit.py  (+58 more)
internship-hunter/: .env.example  .gitignore  LINKEDIN_TODO.md  README.md  build_cv.py  call_prep.py  companies.py  config.py  dashboard.py  discover.py  emailfinder.py  generate.py  llm.py  main.py  micro_intern.py  profile.md.example  pyproject.toml  quality.py  requirements.txt  research.py  sender.py  test_batch.py  tracker.py  warm_intro.py
internship-hunter/tests/: conftest.py  test_build_cv.py  test_config.py  test_peak.py  test_quality.py  test_research.py  test_sender.py  test_tracker.py
yield-system/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
yield-system/docs/: openapi.json  openapi_3_0_2.json  outreach_templates.md  rapidapi_listing_guide.md
yield-system/scripts/: downgrade_openapi.py  refresh_sanctions.py  seed_postcodes.py
yield-system/site/: index.html  privacy.html  terms.html
yield-system/tests/: conftest.py  test_circuit.py  test_email_score.py  test_log.py  test_postcode.py  test_sanctions.py  test_stripe_billing.py  test_webhook_q.py
(+222 files in other folders)
