[project]
name = "clawbot"
version = "0.1.0"
description = "Autonomous AI company — self-evolving corporate agent hierarchy with shareholder governance"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pgvector>=0.3",
    "asyncpg>=0.29",
    "browser-use>=0.1",
    "langchain-openai>=0.1",
    "tenacity>=8.0",
    "fastembed>=0.3",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "stripe>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
