[project]
name = "internship-hunter"
version = "0.1.0"
description = "Automated internship outreach pipeline: discovery, Claude generation, Hunter.io lookup, Gmail batch sender, Streamlit dashboard."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Defaults plus a few opinionated rules that match this codebase.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 (line too long) is covered by formatter; ignore at lint time to avoid
# noise on long string literals in prompt templates.
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
