[project]
name = "yield-system"
version = "0.1.0"
description = "Autonomous yield system runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "stripe>=11.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "dnspython>=2.7",
    "email-validator>=2.3.0",
    "defusedxml>=0.7.1",
    "aiofiles>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "ty>=0.0.1a8",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yield_system"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "S", "T20"]
ignore = ["S101", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"scripts/**" = ["T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
